@@ -2,16 +2,19 @@ package com.rpg.library.services.book;
 
 import com.rpg.library.dto.book.BookDTO;
 import com.rpg.library.dto.book.BookFormDTO;
+import com.rpg.library.entity.author.Author;
 import com.rpg.library.entity.book.Book;
+import com.rpg.library.entity.kind.Kind;
 import com.rpg.library.exceptions.book.BookNotFoundException;
 import com.rpg.library.mappers.book.BookMapper;
+import com.rpg.library.repository.author.AuthorRepository;
 import com.rpg.library.repository.book.BookRepository;
-import jakarta.transaction.Transactional;
+import com.rpg.library.repository.kind.KindRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,9 +22,11 @@ public class BookService {
 
     private final BookRepository bookRepository;
     private final BookMapper bookMapper;
+    private final AuthorRepository authorRepository;
+    private final KindRepository kindRepository;
 
     public List<BookDTO> getAllBooks() {
-        return bookRepository.findAll().stream().map(bookMapper::toDTO).collect(Collectors.toList());
+        return bookRepository.findAll().stream().map(this.bookMapper::toDTO).toList();
     }
     public BookDTO getBookById(Long id) {
         Book book = bookRepository.findById(id).orElseThrow(() -> new BookNotFoundException("Book not found with id " + id));
@@ -30,6 +35,10 @@ public class BookService {
     @Transactional
     public BookDTO createBook(BookFormDTO bookFormDTO) {
         Book book = bookMapper.toEntity(bookFormDTO);
+        final Author author = authorRepository.findById(bookFormDTO.getAuthorId()).orElseThrow();
+        book.setAuthor(author);
+        final List<Kind> kinds = kindRepository.findAllById(bookFormDTO.getKindIds());
+        book.getKinds().addAll(kinds);
         Book savedBook = bookRepository.save(book);
         return bookMapper.toDTO(savedBook);
     }
@@ -37,14 +46,27 @@ public class BookService {
     public BookDTO updateBook(Long id, BookFormDTO bookFormDTO) {
         Book book = bookRepository.findById(id)
                 .orElseThrow(() -> new BookNotFoundException("Book not found with id " + id));
+
+        List<Kind> kinds = kindRepository.findAllById(bookFormDTO.getKindIds());
+
+
+        book.getKinds().forEach(kind -> kind.getBooks().remove(book));
+        book.getKinds().clear();
+        book.getKinds().addAll(kinds);
+
+        kinds.forEach(kind -> kind.getBooks().add(book));
+
+        Author author = authorRepository.findById(bookFormDTO.getAuthorId()).orElseThrow();
+        author.addBook(book);
+
         bookMapper.updateBookFromDTO(bookFormDTO, book);
-        Book updatedBook = bookRepository.save(book);
-        return bookMapper.toDTO(updatedBook);
+        bookRepository.save(book);
+        return bookMapper.toDTO(book);
     }
-    @Transactional
+
     public void deleteBook(Long id) {
         Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BookNotFoundException("Book not found with id " + id));
+                .orElseThrow();
         bookRepository.delete(book);
     }
 }
